Navigate to user profile

--- a/frontend/src/components/services/popularServices/PopularServices.scss
+++ b/frontend/src/components/services/popularServices/PopularServices.scss
@@ -24,6 +24,16 @@
         font-size: $sfs;
       }
 
+      .service-name {
+        color: $blue;
+        text-decoration: underline;
+        cursor: pointer;
+
+        &:hover {
+          color: $tomato;
+        }
+      }
+
       .service-title {
         font-size: $nfs;
         padding: 0;
