--- a/frontend/src/views/userProfilePage/UserProfilePage.scss
+++ b/frontend/src/views/userProfilePage/UserProfilePage.scss
@@ -23,6 +23,7 @@
   .user-profile-page {
     .user-profile-page-container {
       .user-profile-page-title {
+        background-color: $priest-header-bg;
         font-size: $afs;
       }
     }
@@ -35,6 +36,7 @@
     .user-profile-page-container {
       .user-profile-page-title {
         font-size: $afs;
+        background-color: $priest-header-bg;
       }
     }
   }
@@ -46,6 +48,7 @@
     .user-profile-page-container {
       .user-profile-page-title {
         font-size: $afs;
+        background-color: $priest-header-bg;
       }
     }
   }
@@ -57,6 +60,7 @@
     .user-profile-page-container {
       .user-profile-page-title {
         font-size: $aafs;
+        background-color: $priest-header-bg;
       }
     }
   }
