--- a/frontend/src/components/forms/serviceCategory/CategoryForm.scss
+++ b/frontend/src/components/forms/serviceCategory/CategoryForm.scss
@@ -66,3 +66,183 @@
     }
   }
 }
+
+/* Portrait Phones (max-width: 575px) */
+@media (max-width: 575px) {
+  .service-category-modal {
+    @include modal;
+
+    .service-category-popup-box {
+      @include popupBox;
+      width: 90%;
+
+      .close-modal {
+        font-size: $sfs;
+      }
+
+      .service-category-form-title {
+        font-size: $nfs;
+      }
+
+      .service-category-form {
+        .service-category {
+          font-size: $sfs;
+        }
+
+        .input-container {
+          .input-icon {
+            font-size: $sfs;
+          }
+
+          .input-field {
+            font-size: $sfs;
+          }
+
+          .input-label {
+            font-size: $sfs;
+          }
+        }
+
+        .genre-btn {
+          font-size: $sfs;
+        }
+      }
+    }
+  }
+}
+
+/* Landscape Phones (576px - 767px) */
+@media (min-width: 576px) and (max-width: 767px) {
+  .service-category-modal {
+    @include modal;
+
+    .service-category-popup-box {
+      @include popupBox;
+      width: 85%;
+
+      .close-modal {
+        font-size: $nfs;
+      }
+
+      .service-category-form-title {
+        font-size: $afs;
+      }
+
+      .service-category-form {
+        .service-category {
+          font-size: $sfs;
+        }
+
+        .input-container {
+          .input-icon {
+            font-size: $sfs;
+          }
+
+          .input-field {
+            font-size: $sfs;
+          }
+
+          .input-label {
+            font-size: $sfs;
+          }
+        }
+
+        .genre-btn {
+          font-size: $sfs;
+        }
+      }
+    }
+  }
+}
+
+/* Tablets (768px - 1023px) */
+@media (min-width: 768px) and (max-width: 1023px) {
+  .service-category-modal {
+    @include modal;
+
+    .service-category-popup-box {
+      @include popupBox;
+      width: 80%;
+
+      .close-modal {
+        font-size: $nfs;
+      }
+
+      .service-category-form-title {
+        font-size: $afs;
+      }
+
+      .service-category-form {
+        .service-category {
+          font-size: $nfs;
+        }
+
+        .input-container {
+          .input-icon {
+            font-size: $nfs;
+          }
+
+          .input-field {
+            font-size: $nfs;
+          }
+
+          .input-label {
+            font-size: $nfs;
+          }
+        }
+
+        .genre-btn {
+          font-size: $nfs;
+        }
+      }
+    }
+  }
+}
+
+/*  Laptops, iPad Pro, and Small Desktops (1024px - 1366px) */
+@media (min-width: 1024px) and (max-width: 1366px) {
+  .service-category-modal {
+    @include modal;
+
+    .service-category-popup-box {
+      @include popupBox;
+      width: 70%;
+
+      .close-modal {
+        font-size: $nfs;
+      }
+
+      .service-category-form-title {
+        font-size: $aafs;
+      }
+
+      .service-category-form {
+        .service-category {
+          font-size: $nfs;
+        }
+
+        .input-container {
+          .input-icon {
+            font-size: $nfs;
+          }
+
+          .input-field {
+            font-size: $nfs;
+          }
+
+          .input-label {
+            font-size: $nfs;
+          }
+        }
+
+        .genre-btn {
+          font-size: $nfs;
+        }
+      }
+    }
+  }
+}
+
+/* Ultra-High-Resolution Devices (1367px and above) */
+@media (min-width: 1367px) {
+}
