--- a/frontend/src/components/parishAdmin/membersInfos/MembersInfos.scss
+++ b/frontend/src/components/parishAdmin/membersInfos/MembersInfos.scss
@@ -8,12 +8,13 @@
   .parishioners-information-title {
     @include subTitle;
     font-size: $aafs;
+    margin-bottom: 5rem;
   }
 
   .parishioners-year-form {
     position: absolute;
-    top: 1rem;
-    right: 0;
+    top: 4rem;
+    left: 0.5rem;
 
     .input-field {
       @include inputWithButton;
@@ -200,12 +201,13 @@
 
     .parishioners-information-title {
       font-size: $afs;
+      margin-bottom: 5rem;
     }
 
     .parishioners-year-form {
       position: absolute;
-      top: 1rem;
-      right: 0;
+      top: 4rem;
+      left: 0.5rem;
 
       .input-field {
         font-size: $nfs;
