--- a/frontend/src/components/financeManager/summary/SummaryView.scss
+++ b/frontend/src/components/financeManager/summary/SummaryView.scss
@@ -32,6 +32,7 @@
       position: absolute;
       top: 0;
       right: 1rem;
+      z-index: 9;
 
       .input-field {
         @include inputWithButton;
